support Java 17